--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/ikon.svg" type="image/x-icon">
     <title>Buzz</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/js.js" charset="UTF-8"></script> 
@@ -40,10 +41,10 @@
         <button class="button_section1"><h1 class="text4">→</h1></button>
         <button id="pagge2" ><h1 class="text4">?</h1></button>
     </div>
-    <div class="overlay" id="overlay"></div>
-    <div class="popup" id="popup">
+    <div class="help">
         <button class="close"><h1 class="text29">x</h1></button>
-        <h3 class="text30">This is the content of the popup.</h3>
+        <h2 class="text36">СПРАВКА</h2>
+        <h3 class="text31">оранжевого человека <br>и текст можно перемещать по экрану: <br>зажмите нужный <br>элемент и перетащите <br>его в желаемое место,<br> используйте стрелки <br>для переключения<br> между экранами</h3>
     </div>
         <div class="conteiner">
         <div class="chek"><img src="./img/chek.svg" alt=""></div>
@@ -56,7 +57,12 @@
     <div class="buttun1">
         <button class="button_back" data-ter="section1"><h1 class="text4">←</h1></button>
         <button class= "button_section2"><h1 class="text4">→</h1></button>
-        <button class="pagge5" ><h1 class="text4">?</h1></button>
+        <button id="pagge5" ><h1 class="text4">?</h1></button>
+    </div>
+    <div class="help1">
+        <h2 class="text36">СПРАВКА</h2>
+        <button class="close1"><h1 class="text29">x</h1></button>
+        <h3 class="text32">персонализируйте своё <br>портфолио: загрузите <br>свою фотографию, <br>впишите личную <br>информацию, добавьте <br>подпись и выберите<br> подходящий фон, <br>просто нажимая <br>на соответствующие <br>области</h3>
     </div>
     <div class="square">
         <div class="box"><h1 class="text">!</h1></div>
@@ -135,13 +141,29 @@
         <hr class="liner4">
     </div>
     <div class="podpic"></div>
-    <div class="box23"></div>
+    <div class="background">
+        <div class="box200"><img src="./img/back.svg" alt=""></div>
+        <div class="box201"><img src="./img/back1.svg" alt=""></div>
+        <div class="box202"><img src="./img/back2.svg" alt=""></div>
+        <div class="box203"><img src="./img/back3.svg" alt=""></div>
+    </div>
+    <div class="background1">
+        <div class="ground"><img src="./img/background.svg" alt=""></div>
+        <div class="ground1"><img src="./img/background1.svg" alt=""></div>
+        <div class="ground2"><img src="./img/background2.svg" alt=""></div>
+        <div class="ground3"><img src="./img/background3.svg" alt=""></div>
+    </div>
 </div>
 <div class="section3">
     <div class="buttun2">
         <button class="button_backk" data-ter="section2"><h1 class="text4">←</h1></button>
         <button class="button_section3"><h1 class="text4">→</h1></button>
-        <button class="pagge6" ><h1 class="text4">?</h1></button>
+        <button id="pagge6" ><h1 class="text4">?</h1></button>
+    </div>
+    <div class="help2">
+        <h2 class="text36">СПРАВКА</h2>
+        <button class="close2"><h1 class="text29">x</h1></button>
+        <h3 class="text33">ваша первая работа <br>в портфолио: <br>перетаскивайте нужное <br>здание по экрану, <br>удерживая его мышкой</h3>
     </div>
     <div class="city"><img src="./img/city.svg" alt=""></div>
     <div class="box34"></div>
@@ -175,7 +197,12 @@
     <div class="buttun3">
         <button class="button_backkk" data-ter="section3"><h1 class="text4">←</h1></button>
         <button class="button_section4"><h1 class="text4">→</h1></button>
-        <button class="pagge7" ><h1 class="text4">?</h1></button>
+        <button id="pagge7" ><h1 class="text4">?</h1></button>
+    </div>
+    <div class="help3">
+        <h2 class="text36">СПРАВКА</h2>
+        <button class="close3"><h1 class="text29">x</h1></button>
+        <h3 class="text34">ваша вторая работа <br> в портфолио: чтобы <br>начать рисовать,<br> нажмите на кнопку <br>с изображением ручки, <br>затем настройте цвет<br> и толщину линии, <br>а также не забудьте<br> использовать стикеры,<br> просто зажмите их <br>мышкой и перенесите<br> в любое место</h3>
     </div>
     <div class="fence"><img src="./img/fence.svg" alt=""></div>
     <h2 class="text19">ВАШЕ ПОРТФОЛИО</h2>
@@ -239,7 +266,12 @@
     <div class="buttun4">
         <button class="button_backkkk" data-ter="section4"><h1 class="text4">←</h1></button>
         <button class="button_section5"><h1 class="text4">→</h1></button>
-        <button class="pagge8" ><h1 class="text4">?</h1></button>
+        <button id="pagge8" ><h1 class="text4">?</h1></button>
+    </div>
+    <div class="help4">
+        <button class="close4"><h1 class="text29">x</h1></button>
+        <h2 class="text36">СПРАВКА</h2>
+        <h3 class="text35">ваш результат: вы <br> можете перетаскивать <br>экраны по всему <br>пространству, также <br>вы можете нажать <br>на кнопку свернуть <br>экран или полностью <br>закрыть его, чтобы <br>вернуть всё в исходное <br>состояние, обновите <br>страницу</h3>
     </div>
     <div class="back1"></div>
     <h2 class="text21">ВАШ РЕЗУЛЬТАТ</h2>
