--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/ikon.svg" type="image/x-icon">
-    <title>Buzz</title>
+    <title>BUZZ</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/js.js" charset="UTF-8"></script> 
     <script src="./js/1.js" charset="UTF-8"></script> 
@@ -14,6 +14,9 @@
     <script src="./js/draw.js" charset="UTF-8"></script> 
 </head>
 <body>
+    <div id="progress-container">
+        <div id="progress-bar"></div>
+    </div>
  <div class="section1"> 
     <div class="square">
         <div class="box"><h1 class="text">!</h1></div>
