--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <link rel="shortcut icon" href="./img/ikon.svg" type="image/x-icon">
     <title>BUZZ</title>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/js.js" charset="UTF-8"></script> 
     <script src="./js/1.js" charset="UTF-8"></script> 
-    <script src="./js/5.js" charset="UTF-8"></script> 
+    <script src="./js/2.js" charset="UTF-8"></script> 
     <script src="./js/3.js" charset="UTF-8"></script> 
     <script src="./js/4.js" charset="UTF-8"></script> 
+    <script src="./js/5.js" charset="UTF-8"></script> 
     <script src="./js/draw.js" charset="UTF-8"></script> 
 </head>
 <body>
-    <div id="progress-container">
-        <div id="progress-bar"></div>
-    </div>
  <div class="section1"> 
     <div class="square">
         <div class="box"><h1 class="text">!</h1></div>
@@ -144,9 +141,10 @@
         <hr class="liner4">
     </div>
     <div class="podpic"></div>
+    <div class="podpic1"><img src="./img/podpic.svg" alt=""></div>
     <div class="background">
-        <div class="box200"><img src="./img/back.svg" alt=""></div>
-        <div class="box201"><img src="./img/back1.svg" alt=""></div>
+        <div class="box200"><img src="./img/back1.svg" alt=""></div>
+        <div class="box201"><img src="./img/back.svg" alt=""></div>
         <div class="box202"><img src="./img/back2.svg" alt=""></div>
         <div class="box203"><img src="./img/back3.svg" alt=""></div>
     </div>
@@ -377,8 +375,6 @@
     <div class="you"><img src="./img/you.svg" alt=""></div>
     <div class="hire"><img src="./img/hire.svg" alt=""></div>
 </div>
-
-
 
 </body>
 </html>
