--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="./img/ikon.svg" type="image/x-icon">
     <title>BUZZ</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/adaptive.css">
     <script src="./js/1.js" charset="UTF-8"></script> 
     <script src="./js/2.js" charset="UTF-8"></script> 
     <script src="./js/3.js" charset="UTF-8"></script> 
@@ -46,7 +47,6 @@
         <h2 class="text36">СПРАВКА</h2>
         <h3 class="text31">оранжевого человека <br>и текст можно перемещать по экрану: <br>зажмите нужный <br>элемент и перетащите <br>его в желаемое место,<br> используйте стрелки <br>для переключения<br> между экранами</h3>
     </div>
-        <div class="conteiner">
         <div class="chek"><img src="./img/chek.svg" alt=""></div>
         <div class="title1"><img src="./img/title1.svg" alt=""></div>
         <div class="title2"><img src="./img/title2.svg" alt=""></div>
@@ -119,10 +119,10 @@
         <div class="text13">получение информации:</div>
         <div class="text14">процент улавливаемых слухов:</div>
         <div class="text15">подпись:</div>
-        <div id="text1cont" class="text1conteiner"></div>
+        <div class="cont"><div id="text1cont" class="text1conteiner"></div>
         <div id="text2cont" class="text2conteiner"></div>
         <div id="text3cont" class="text3conteiner"></div>
-        <div id="text4cont" class="text4conteiner"></div>
+        <div id="text4cont" class="text4conteiner"></div></div>
         <div class="square8">
             <div class="box24"><h1 class="text">//</h1></div>
             <div class="box25"><h1 class="text">0</h1></div>
@@ -176,7 +176,7 @@
     </div>
     <h2 class="text16">ВАШЕ ПОРТФОЛИО</h2>
     <h3 class="text17">для принятия решения о сотрудничестве <br>просим вас продемонстрировать ваши <br>профессиональные навыки и умения</h3>
-    <h2 class="text18">ИЗДАТЕЛЬСТВО СПЛЕТЕН «BUZZ»</h2>
+    <h2 class="text18">ИЗДАТЕЛЬСТВО СПЛЕТЕН <span class="buzz">«BUZZ»</span></h2>
     <div class="square10">
         <div class="box8"><h1 class="text">B</h1></div>
         <div class="box9"><h1 class="text">U</h1></div>
